--- a/index.html
+++ b/index.html
@@ -244,22 +244,23 @@
             <img src="images/avatar.png" alt="">
         </div>
         <div class="main-footer__content">
-            <h2 class="h2 main-footer__title">Лучше 1 раз услышать</h2>
-            <div class="h2_subtitle main-footer__description">чем 100 раз прочитать</div>
-            <div class="main-footer__callback-form">
-                <button class="button main-footer__button main-footer__button_one">
-                    <img src="images/comment.png" alt="" class="main-footer__button-icon main-footer__button-icon_one">
-                    <span class="main-footer__button-title">познакомиться</span>
-                </button>
-                <form action="#" class="main-footer__form">
-                    <input class="main-footer__form-input" type="text" name="email" autocomplete="off" placeholder="Ваша почта / skype">
-                    <button class="button main-footer__button main-footer__button_two">
-                        <img src="images/connect.png" alt="" class="main-footer__button-icon main-footer__button-icon_two">
-                        <span class="main-footer__button-title">отправить</span>
+            <div class="main-footer__content-top">
+                <h2 class="h2 main-footer__title">Лучше 1 раз услышать</h2>
+                <div class="h2_subtitle main-footer__description">чем 100 раз прочитать</div>
+                <div class="main-footer__callback-form">
+                    <button class="button main-footer__button main-footer__button_one">
+                        <img src="images/comment.png" alt="" class="main-footer__button-icon main-footer__button-icon_one">
+                        <span class="main-footer__button-title">познакомиться</span>
                     </button>
-                </form>
+                    <form action="#" class="main-footer__form">
+                        <input class="main-footer__form-input" type="text" name="email" autocomplete="off" placeholder="Ваша почта / skype">
+                        <button class="button main-footer__button main-footer__button_two">
+                            <img src="images/connect.png" alt="" class="main-footer__button-icon main-footer__button-icon_two">
+                            <span class="main-footer__button-title">отправить</span>
+                        </button>
+                    </form>
+                </div>
             </div>
-
 
             <div class="main-footer__smm">
                 <div class="main-footer__smm-title">
